# WorkshopRust

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/commands/: command_addition.rs  command_multiplication.rs  command_soustraction.rs  mod.rs  utils.rs
