[package]
name = "project1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI lib
clap = { version = "3.1.6", features = ["derive"] }
clap_generate = "3.0.3"
# log
log = "0.4"
env_logger = "0.9"
text_io = "0.1.10"
random-number = "0.1.6"
rand = "0.8.5"